@@ -1,52 +1,65 @@
 package ua.com.fielden.platform.entity;
 
+import static java.lang.String.format;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
-import static ua.com.fielden.platform.entity.validation.annotation.ValidationAnnotation.NOT_EMPTY;
+import static ua.com.fielden.platform.entity.exceptions.EntityDefinitionException.INVALID_USE_FOR_PRECITION_AND_SCALE_MSG;
+import static ua.com.fielden.platform.entity.exceptions.EntityDefinitionException.INVALID_USE_OF_NUMERIC_PARAMS_MSG;
+import static ua.com.fielden.platform.entity.exceptions.EntityDefinitionException.INVALID_USE_OF_PARAM_LENGTH_MSG;
+import static ua.com.fielden.platform.entity.exceptions.EntityDefinitionException.INVALID_VALUES_FOR_PRECITION_AND_SCALE_MSG;
+import static ua.com.fielden.platform.types.try_wrapper.TryWrapper.Try;
 
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
 
+import org.apache.commons.lang.exception.ExceptionUtils;
 import org.junit.Before;
 import org.junit.Test;
+
+import com.google.inject.Injector;
 
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity1;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity2;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity3;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity4;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity6;
+import ua.com.fielden.platform.entity.exceptions.EntityDefinitionException;
 import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.IMetaPropertyFactory;
-import ua.com.fielden.platform.entity.ioc.ObservableMutatorInterceptor;
-import ua.com.fielden.platform.entity.meta.IAfterChangeEventHandler;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
+import ua.com.fielden.platform.entity.proxy.EntityProxyContainer;
 import ua.com.fielden.platform.entity.validation.HappyValidator;
 import ua.com.fielden.platform.entity.validation.annotation.ValidationAnnotation;
 import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.error.Warning;
 import ua.com.fielden.platform.ioc.ApplicationInjectorFactory;
 import ua.com.fielden.platform.reflection.Finder;
-import ua.com.fielden.platform.reflection.Reflector;
+import ua.com.fielden.platform.reflection.TitlesDescsGetter;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidIntegerProp;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidMoneyPropWithLength;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidMoneyPropWithPrecision;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidMoneyPropWithScale;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidStringPropWithPrecision;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidStringPropWithScale;
+import ua.com.fielden.platform.reflection.test_entities.EntityWithInvalidStringPropWithTrailingZeros;
 import ua.com.fielden.platform.reflection.test_entities.SecondLevelEntity;
 import ua.com.fielden.platform.reflection.test_entities.SimplePartEntity;
 import ua.com.fielden.platform.reflection.test_entities.UnionEntityForReflector;
 import ua.com.fielden.platform.test.CommonTestEntityModuleWithPropertyFactory;
 import ua.com.fielden.platform.test.EntityModuleWithPropertyFactory;
 import ua.com.fielden.platform.types.Money;
-import ua.com.fielden.platform.utils.PropertyChangeSupportEx.PropertyChangeOrIncorrectAttemptListener;
-
-import com.google.inject.Injector;
+import ua.com.fielden.platform.types.either.Either;
+import ua.com.fielden.platform.types.either.Left;
 
 /**
  * Unit test for :
@@ -60,7 +73,6 @@ import com.google.inject.Injector;
  *
  */
 public class AbstractEntityTest {
-    private boolean observed = false; // used
     private boolean observedForIncorrectAttempt = false; // used
     private final EntityModuleWithPropertyFactory module = new CommonTestEntityModuleWithPropertyFactory();
     {
@@ -68,19 +80,13 @@ public class AbstractEntityTest {
         module.getDomainValidationConfig().setValidator(Entity.class, "doubles", new HappyValidator());
         module.getDomainValidationConfig().setValidator(Entity.class, "number", new HappyValidator() {
             @Override
-            public Result handle(final MetaProperty property, final Object newValue, final Object oldValue, final Set<Annotation> mutatorAnnotations) {
+            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
                 if (newValue != null && newValue.equals(35)) {
                     return new Result(property, new Exception("Domain : Value 35 is not permitted."));
                 } else if (newValue != null && newValue.equals(77)) {
                     return new Warning("DOMAIN validation : The value of 77 is dangerous.");
                 }
-                return super.handle(property, newValue, oldValue, mutatorAnnotations);
-            }
-        });
-        module.getDomainMetaPropertyConfig().setDefiner(Entity.class, "firstProperty", new IAfterChangeEventHandler<Object>() {
-            @Override
-            public void handle(final MetaProperty property, final Object entityPropertyValue) {
-                property.setRequired(!property.isRequired());
+                return super.handle(property, newValue, mutatorAnnotations);
             }
         });
     }
@@ -91,25 +97,12 @@ public class AbstractEntityTest {
 
     @Before
     public void setUp() {
-        observed = false;
         entity = factory.newEntity(Entity.class, "key", "description"); // this ensures all listeners are removed
     }
 
     @Test
     public void testEntityFactoryReferenceIsSet() {
         assertEquals(factory, entity.getEntityFactory());
-    }
-
-    @Test
-    public void testThatObservablePropertyIsObserved() {
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        entity.setObservableProperty(22.0);
-        assertEquals("Property should have been observed.", true, observed);
     }
 
     @Test
@@ -131,18 +124,6 @@ public class AbstractEntityTest {
         assertEquals("Property change count is incorrect", 3, entity.getProperty("observableProperty").getValueChangeCount());
         assertEquals("current value must be changed (original value 2)", true, entity.getProperty("observableProperty").isChangedFromOriginal());
         assertEquals("current value must be changed (previous value 2)", true, entity.getProperty("observableProperty").isChangedFromPrevious());
-    }
-
-    @Test
-    public void testThatNotObservablePropertyIsNotObserved() {
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        entity.setFirstProperty(22);
-        assertEquals("Property should not have been observed.", false, observed);
     }
 
     @Test
@@ -172,54 +153,30 @@ public class AbstractEntityTest {
         assertNull("Incorrect value for last invalid value.", entity.getProperty("firstProperty").getLastInvalidValue());
     }
 
-    /**
-     * This test ensures that validation happens before observing.
-     */
     @Test
-    public void testThatPropertyValidationWorksForObservableProperty() {
-        // test validation of the observableProperty
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        final Double value = 23.0;
-        entity.setObservableProperty(value);
-        assertTrue("Property observableProperty validation failed.", entity.getProperty("observableProperty").isValid());
-        assertEquals("Property change should have been observed.", true, observed);
-        observed = false;
-        // try to assign null
-        entity.setObservableProperty(null);
-        assertFalse("Property observableProperty validation failed.", entity.getProperty("observableProperty").isValid());
-        assertEquals("Incorrect validation error message.", Entity.NOT_NULL_MSG, entity.getProperty("observableProperty").getFirstFailure().getMessage());
-        assertEquals("Value assignment should have been prevented by the validator,", value, entity.getObservableProperty());
-        assertEquals("Property change should have not been observed.", false, observed);
-
-    }
-
-    @Test
-    public void testThatFinalValidationWorks() {
-        entity.setFinalProperty(null);
-        assertTrue("Property finalProperty validation failed when assigning null.", entity.getProperty("finalProperty").isValid());
+    public void final_property_for_non_persistent_entity_can_only_be_assigned_once() {
+        assertTrue(entity.getProperty("finalProperty").isEditable());
         entity.setFinalProperty(60.0);
-        assertTrue("Property finalProperty validation failed when assigning non-null value for the first time.", entity.getProperty("finalProperty").isValid());
+        assertTrue(entity.getProperty("finalProperty").isValid());
+        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertFalse(entity.getProperty("finalProperty").isEditable());
+        
         entity.setFinalProperty(31.0);
-        assertTrue("Property finalProperty validation failed when assigning non-null value the second time for non-persistent entity.", entity.getProperty("finalProperty").isValid());
-
-        // making entity "persistent"
-        try {
-            final Method method = Reflector.getMethod(AbstractEntity.class, "setId", Long.class);
-            method.setAccessible(true);
-            method.invoke(entity, 1L);
-            method.setAccessible(false);
-        } catch (final Exception e) {
-            fail(e.getMessage());
-        }
-        entity.setFinalProperty(35.0);
-        assertFalse("Property finalProperty validation failed when assigning non-null value the second time for persistent entity.", entity.getProperty("finalProperty").isValid());
-        assertEquals("Incorrect value for last invalid value.", new Double(35.0), entity.getProperty("finalProperty").getLastInvalidValue());
+        assertFalse(entity.getProperty("finalProperty").isValid());
+        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertFalse(entity.getProperty("finalProperty").isEditable());
     }
+    
+    @Test
+    public void persistentOnly_final_property_for_non_persistent_entity_yields_invalid_definition() {
+        final Either<Exception, EntityInvalidDefinition> result = Try(() -> factory.newEntity(EntityInvalidDefinition.class, "key", "desc"));
+        assertTrue(result instanceof Left);
+        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value);
+        assertTrue(rootCause instanceof EntityDefinitionException);
+        assertEquals(format("Non-persistent entity [%s] has property [%s], which is incorrectly annotated with @Final(persistentOnly = true).", EntityInvalidDefinition.class.getSimpleName(), "firstProperty"),
+                rootCause.getMessage());
+    }
+    
 
     @Test
     public void testNewEntityWithDynamicKey() {
@@ -228,25 +185,20 @@ public class AbstractEntityTest {
         final Entity key3 = entity;
 
         // testing if entity is created correctly
-        try {
-            final EntityWithDynamicEntityKey entityWithDynamicEntityKey = factory.newByKey(EntityWithDynamicEntityKey.class, key1, key2, key3);
+        final EntityWithDynamicEntityKey entityWithDynamicEntityKey = factory.newByKey(EntityWithDynamicEntityKey.class, key1, key2, key3);
 
-            assertNotNull(entityWithDynamicEntityKey);
-            assertNotNull(entityWithDynamicEntityKey.getKey());
-            assertEquals(key1, entityWithDynamicEntityKey.getKey1());
-            assertEquals(key2, entityWithDynamicEntityKey.getKey2());
-            assertEquals(key3, entityWithDynamicEntityKey.getKey3());
+        assertNotNull(entityWithDynamicEntityKey);
+        assertNotNull(entityWithDynamicEntityKey.getKey());
+        assertEquals(key1, entityWithDynamicEntityKey.getKey1());
+        assertEquals(key2, entityWithDynamicEntityKey.getKey2());
+        assertEquals(key3, entityWithDynamicEntityKey.getKey3());
 
-            assertEquals(factory, entityWithDynamicEntityKey.getEntityFactory());
-        } catch (final Exception e) {
-            fail();
-        }
+        assertEquals(factory, entityWithDynamicEntityKey.getEntityFactory());
 
         // testing if exception is thrown in case of wrong number of parameters
         boolean exceptionWasThrown = false;
         try {
-            @SuppressWarnings("unused")
-            final EntityWithDynamicEntityKey entityWithDynamicEntityKey = factory.newByKey(EntityWithDynamicEntityKey.class, key1, key2);
+            factory.newByKey(EntityWithDynamicEntityKey.class, key1, key2);
         } catch (final Exception e) {
             exceptionWasThrown = true;
         }
@@ -298,43 +250,38 @@ public class AbstractEntityTest {
     }
 
     /**
-     * This test ensures correct setter behaviour for a collectional property:
+     * This test ensures the correct setter behaviour for a collectional property:
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertySetterIsObservedAndValidated() {
-        final MetaProperty metaProperty = entity.getProperty("doubles");
-        assertEquals("Incorrect number of validators.", 2, metaProperty.getValidators().size());
-        assertTrue("Should have domain validation.", metaProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
-        assertTrue("Should have not-null validation.", metaProperty.getValidators().containsKey(ValidationAnnotation.NOT_NULL));
-        assertNull("There should be no domain validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNull("There should be no not-null validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL));
+        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
+        assertEquals("Incorrect number of validators.", 2, doublesProperty.getValidators().size());
+        assertTrue("Should have domain validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
+        assertTrue("Should have not-null validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
+        assertNull("There should be no domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertNull("There should be no rquiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
         entity.setDoubles(Arrays.asList(new Double[] { 2.0, 3.0 }));
-        entity.addPropertyChangeListener("doubles", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                assertEquals("Incorrect old value.", 0, event.getOldValue()); // should always be 0
-                assertEquals("Incorrect new value.", 1, event.getNewValue()); // should always be 1
-                observed = true;
-            }
-        });
         entity.setDoubles(Arrays.asList(new Double[] { 2.0 }));
 
-        assertEquals("Property should have been observed.", true, observed);
-        assertNull("Incorrect original value", metaProperty.getOriginalValue());
-        assertEquals("Incorrect previous value", 2, metaProperty.getPrevValue());
-        assertNotNull("There should be domain validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be not-null validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL));
-        assertTrue("Not-null validation result should be successful.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL).isSuccessful());
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { 2.0, 3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
+        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertNotNull("There should be a requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requirendess validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
         entity.setDoubles(null);
-        assertFalse("Not-null validation result should not be successful.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL).isSuccessful());
+        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
         assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
     }
 
@@ -343,35 +290,31 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertyIncrementorIsObservedAndValidated() {
-        final MetaProperty metaProperty = entity.getProperty("doubles");
+        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
         entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
 
-        entity.addPropertyChangeListener("doubles", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                assertEquals("Incorrect old value.", 2, event.getOldValue()); // oldValue == oldSize
-                assertEquals("Incorrect new value.", 2.0, event.getNewValue()); // newValue == newAddedValue!!!
-                observed = true;
-            }
-        });
         entity.addToDoubles(2.0);
 
-        assertEquals("Property should have been observed.", true, observed);
         assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
-        assertNull("Incorrect original value", metaProperty.getOriginalValue());
-        assertEquals("Incorrect previous value", 2, metaProperty.getPrevValue());
-        assertNotNull("There should be a domain validation result.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNotNull("There should be not-null validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL));
-        assertTrue("Not-null validation result should be successful.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL).isSuccessful());
+
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
+        assertNotNull("There should be a domain validation result.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertNotNull("There should be requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requiredness validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
         entity.addToDoubles(null);
-        assertFalse("Not-null validation result should not be successful.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL).isSuccessful());
+        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
         assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
         assertNull("Null value is expected for the last invalid value.", entity.getProperty("doubles").getLastInvalidValue());
     }
@@ -381,32 +324,28 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertyDecrementorIsObservedAndValidated() {
-        final MetaProperty metaProperty = entity.getProperty("doubles");
+        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
         entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
 
-        entity.addPropertyChangeListener("doubles", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                assertEquals("Incorrect old value.", -2.0, event.getOldValue()); // oldValue = oldRemovedValue!!!
-                assertEquals("Incorrect new value.", 1, event.getNewValue()); // newValue = newSize
-                observed = true;
-            }
-        });
         entity.removeFromDoubles(-2.0);
 
-        assertTrue("Property should have been observed.", observed);
         assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
-        assertNull("Incorrect original value", metaProperty.getOriginalValue());
-        assertEquals("Incorrect previous value", 2, metaProperty.getPrevValue());
-        assertNotNull("There should be domain validation result at this stage.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", metaProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be not-null validation result.", metaProperty.getValidationResult(ValidationAnnotation.NOT_NULL));
+        
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
+        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertNotNull("There should be requiredness validation result.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
         assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
     }
 
@@ -418,10 +357,10 @@ public class AbstractEntityTest {
 
         final EntityWithDynamicEntityKey entityWithDynamicEntityKey = factory.newByKey(EntityWithDynamicEntityKey.class, key1, key2, key3);
 
-        final Set<MetaProperty> metaProperties = Finder.getMetaProperties(entityWithDynamicEntityKey);
+        final Set<MetaProperty<?>> metaProperties = Finder.getMetaProperties(entityWithDynamicEntityKey);
         assertEquals("Incorrect number of meta properties.", 5, metaProperties.size());
 
-        final List<MetaProperty> list = new ArrayList<MetaProperty>();
+        final List<MetaProperty<?>> list = new ArrayList<>();
         list.addAll(metaProperties);
         assertEquals("Incorrect sorting order for meta-properties.", "key1", list.get(0).getName());
         assertEquals("Incorrect sorting order for meta-properties.", "key2", list.get(1).getName());
@@ -433,44 +372,30 @@ public class AbstractEntityTest {
     @Test
     public void testValidationAndSettingRestrictionInObservableMutator() {
         // preparing
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        final MetaProperty metaProperty = entity.getProperty("observableProperty");
+        final MetaProperty<Double> metaProperty = entity.getProperty("observableProperty");
         // 1. test the error recovery by the same value
         entity.setObservableProperty(100.0);
         entity.setObservableProperty(null);
-        observed = false;
         entity.setObservableProperty(100.0);
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
-        assertTrue("observing logic have to be invoked after the error recovery", observed);
 
         // 2. test the error recovery by the different value
         entity.setObservableProperty(100.0);
         entity.setObservableProperty(null);
-        observed = false;
         entity.setObservableProperty(101.0);
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
-        assertTrue("observing logic have to be invoked after the error recovery", observed);
 
         // 3. collectional property validation/observation tested in previous tests
 
         // 4. test simple property validation/observation invoking for different new/old values :
         entity.setObservableProperty(100.0);
-        observed = false;
         entity.setObservableProperty(101.0);
         assertTrue("the property after different value setted have to be valid", metaProperty.isValid());
-        assertTrue("observing logic have to be invoked after different value setted ", observed);
 
         // 5. test simple property validation/observation not invoking for the same new/old values :
         entity.setObservableProperty(100.0);
-        observed = false;
         entity.setObservableProperty(100.0);
         assertTrue("the property after the same value setted have to be valid", metaProperty.isValid());
-        assertFalse("observing logic have not be invoked after the same value setted ", observed);
 
         // 6. test simple property validation/observation in case where it is initialised with NULL at construction time
         // previous value, which is also original, is null
@@ -483,129 +408,69 @@ public class AbstractEntityTest {
     @Test
     public void testValidationWarnings() {
         // preparing
-        entity.addPropertyChangeListener("number", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        final MetaProperty metaProperty = entity.getProperty("number");
+        final MetaProperty<Integer> metaProperty = entity.getProperty("number");
         entity.setNumber(40);
         // 1. test warning generation on Domain Validation level:
-        observed = false;
         entity.setNumber(77);
         assertTrue("DOMAIN : The property should be valid with warning.", metaProperty.isValid());
         assertTrue("DOMAIN : The property should have warnings.", metaProperty.hasWarnings());
-        assertTrue("DOMAIN : Observing logic should be invoked after setting warning value.", observed);
-        assertEquals("DOMAIN : Warning value should be set.", 77, entity.get("number"));
+        assertEquals("DOMAIN : Warning value should be set.", Integer.valueOf(77), entity.get("number"));
 
         // 2. recovery :
-        observed = false;
         entity.setNumber(40);
         assertTrue("DOMAIN : The property should remain valid after recovery.", metaProperty.isValid());
         assertFalse("DOMAIN : The property should not have warnings after recovery.", metaProperty.hasWarnings());
-        assertTrue("DOMAIN : Observing logic should be invoked during recovery.", observed);
-        assertEquals("DOMAIN : Recovery value should be set.", 40, entity.get("number"));
+        assertEquals("DOMAIN : Recovery value should be set.", Integer.valueOf(40), entity.get("number"));
 
         // 3. test warning generation on Dynamic Validation level (validation inside setter):
-        observed = false;
         entity.setNumber(777);
         assertTrue("DYNAMIC : The property should be valid with warning.", metaProperty.isValid());
         assertTrue("DYNAMIC : The property should have warnings.", metaProperty.hasWarnings());
-        assertTrue("DYNAMIC : Observing logic should be invoked after setting warning value.", observed);
-        assertEquals("DYNAMIC : Warning value should be set.", 777, entity.get("number"));
+        assertEquals("DYNAMIC : Warning value should be set.", Integer.valueOf(777), entity.get("number"));
 
         // 4. recovery :
-        observed = false;
         entity.setNumber(40);
         assertTrue("The property should remain valid after recovery.", metaProperty.isValid());
         assertFalse("The property should not have warnings after recovery.", metaProperty.hasWarnings());
-        assertTrue("Observing logic should be invoked during recovery.", observed);
-        assertEquals("Recovery value should be set.", 40, entity.get("number"));
+        assertEquals("Recovery value should be set.", Integer.valueOf(40), entity.get("number"));
 
         // 5. test warning generation on Dynamic Validation level (validation inside setter):
-        observed = false;
         entity.setNumber(777);
         assertTrue("DYNAMIC : The property should be valid with warning.", metaProperty.isValid());
         assertTrue("DYNAMIC : The property should have warnings.", metaProperty.hasWarnings());
-        assertTrue("DYNAMIC : Observing logic should be invoked after setting warning value.", observed);
-        assertEquals("DYNAMIC : Warning value should be set.", 777, entity.get("number"));
+        assertEquals("DYNAMIC : Warning value should be set.", Integer.valueOf(777), entity.get("number"));
 
         // 6. recovery by setting another warning value! :
-        observed = false;
         entity.setNumber(77);
         assertTrue("The property should remain valid after recovery (by setting another warning value).", metaProperty.isValid());
         assertTrue("The property should have warnings after recovery (by setting another warning value).", metaProperty.hasWarnings());
-        assertTrue("Observing logic should be invoked during recovery.", observed);
-        assertEquals("Recovery warning value should be set.", 77, entity.get("number"));
-    }
-
-    @Test
-    public void testNotEmptyValidation() {
-        final Entity entity = factory.newByKey(Entity.class, "test-entity");
-        entity.setStrProp("correct value");
-        assertTrue(entity.getProperty("strProp").getValidators().get(NOT_EMPTY).values().iterator().next().isSuccessful());
-        entity.setStrProp(null);
-        assertTrue(entity.getProperty("strProp").getValidators().get(NOT_EMPTY).values().iterator().next().isSuccessful());
-        entity.setStrProp("");
-        assertFalse(entity.getProperty("strProp").getValidators().get(NOT_EMPTY).values().iterator().next().isSuccessful());
-    }
-
-    @Test
-    public void testIncorrectAttemptFiringInObservableMutator() {
-        // simple property change listener
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observed = true;
-            }
-        });
-        // incorrect attempt or property change listener
-        entity.addPropertyChangeListener("observableProperty", new PropertyChangeOrIncorrectAttemptListener() {
-            @Override
-            public void propertyChange(final PropertyChangeEvent event) {
-                observedForIncorrectAttempt = true;
-            }
-        });
-        // 1. test that incorrect setting attempt fires PropertyChangeOrIncorrectAttemptListener and not fires simple PropertyChangeListener
-        observed = false;
-        observedForIncorrectAttempt = false;
-        entity.setObservableProperty(null);
-        assertTrue("incorrect attempt firing have to be invoked", observedForIncorrectAttempt);
-        assertFalse("observing logic for simple PropertyChangeListeners haven't to be invoked", observed);
-
-        // 2. test that correct setting attempt fires ALL PropertyChangeListeners
-        observed = false;
-        observedForIncorrectAttempt = false;
-        entity.setObservableProperty(100.0);
-        assertTrue("all types of Listeners have to be invoked (even PropertyChangeOrIncorrectAttemptListener!)", observedForIncorrectAttempt);
-        assertTrue("observing logic for simple PropertyChangeListeners have to be invoked", observed);
+        assertEquals("Recovery warning value should be set.", Integer.valueOf(77), entity.get("number"));
     }
 
     @Test
     public void testCorrectAssignmentOfMetaPropertyPropertiesBaseOnAnnotations() {
-        final MetaProperty firstPropertyMetaProp = entity.getProperty("firstProperty");
+        final MetaProperty<Integer> firstPropertyMetaProp = entity.getProperty("firstProperty");
         assertTrue("Should be requried", firstPropertyMetaProp.isRequired());
         assertFalse("Should not be editable", firstPropertyMetaProp.isEditable());
         assertEquals("Incorrect title", "First Property", firstPropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "used for testing", firstPropertyMetaProp.getDesc());
 
-        final MetaProperty observablePropertyMetaProp = entity.getProperty("observableProperty");
-        assertFalse("Should not be requried", observablePropertyMetaProp.isRequired());
+        final MetaProperty<Double> observablePropertyMetaProp = entity.getProperty("observableProperty");
+        assertTrue("Should be requried", observablePropertyMetaProp.isRequired());
         assertTrue("Should be editable", observablePropertyMetaProp.isEditable());
         assertEquals("Incorrect title", "Observable Property", observablePropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "Observable Property", observablePropertyMetaProp.getDesc());
 
-        final MetaProperty finalPropertyMetaProp = entity.getProperty("finalProperty");
+        final MetaProperty<Double> finalPropertyMetaProp = entity.getProperty("finalProperty");
         assertFalse("Should not bevisible", finalPropertyMetaProp.isVisible());
 
-        final MetaProperty keyMetaProp = entity.getProperty("key");
+        final MetaProperty<String> keyMetaProp = entity.getProperty("key");
         assertTrue("Should be requried", keyMetaProp.isRequired());
         assertTrue("Should be editable", keyMetaProp.isEditable());
         assertEquals("Incorrect title", "Entity No", keyMetaProp.getTitle());
         assertEquals("Incorrect desc", "Key Property", keyMetaProp.getDesc());
 
-        final MetaProperty descMetaProp = entity.getProperty("desc");
+        final MetaProperty<String> descMetaProp = entity.getProperty("desc");
         assertTrue("Should be requried", descMetaProp.isRequired());
         assertTrue("Should be editable", descMetaProp.isEditable());
         assertEquals("Incorrect title", "Description", descMetaProp.getTitle());
@@ -613,24 +478,22 @@ public class AbstractEntityTest {
     }
 
     @Test
-    public void testMetaPropertyRequirementValidation() {
-        final MetaProperty firstPropertyMetaProp = entity.getProperty("firstProperty");
+    public void required_by_declaration_property_cannot_have_null_value() {
+        final MetaProperty<Integer> firstPropertyMetaProp = entity.getProperty("firstProperty");
         assertTrue("Should be required", firstPropertyMetaProp.isRequired());
         assertTrue("REQUIREDValidator should be present for 'required' property.", firstPropertyMetaProp.getValidators().containsKey(ValidationAnnotation.REQUIRED));
+        
         entity.setFirstProperty(null);
         assertFalse("Required property is not yet populated and thus entity should be invalid.", entity.isValid().isSuccessful());
 
         entity.setFirstProperty(56);
         assertTrue("Required property with not null value have to be valid.", firstPropertyMetaProp.isValid());
-        assertFalse("Should be not required", firstPropertyMetaProp.isRequired());
-
-        firstPropertyMetaProp.setRequired(false);
-        assertFalse("Should not be required", firstPropertyMetaProp.isRequired());
-        assertTrue("REQUIREDValidator should be present for 'required in the past' property.", firstPropertyMetaProp.getValidators().containsKey(ValidationAnnotation.REQUIRED));
-        entity.setFirstProperty(null);
-        assertFalse("Not 'required' property (with NotNullValidator) with null value have to be invalid.", firstPropertyMetaProp.isValid());
-
-        final MetaProperty secondMetaProperty = entity.getProperty("money");
+        assertTrue("Should remain required", firstPropertyMetaProp.isRequired());
+    }
+    
+    @Test
+    public void not_required_by_declaration_property_may_have_its_requiredness_changed_at_runtime() {
+        final MetaProperty<Money> secondMetaProperty = entity.getProperty("money");
         secondMetaProperty.setRequired(true);
         assertTrue("Should be required", secondMetaProperty.isRequired());
         assertTrue("REQUIREDValidator should be present for 'required' property.", secondMetaProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
@@ -642,49 +505,25 @@ public class AbstractEntityTest {
         assertTrue("Not 'required' property (with no NotNullValidator) with null value have to be valid.", secondMetaProperty.isValid());
     }
 
-    /**
-     * The requirement checks inside MetaProperty's isValid() method, rather than inside AbstractEntity's isValid(). So this logic this tests here.
-     */
     @Test
-    public void testAbstractEntityRequirementValidation() {
-        final MetaProperty firstPropertyMetaProp = entity.getProperty("firstProperty");
-
-        firstPropertyMetaProp.setRequired(false);
-        assertFalse("Should not be required", firstPropertyMetaProp.isRequired());
-        assertTrue("REQUIREDValidator should be present for 'required in the past' property.", firstPropertyMetaProp.getValidators().containsKey(ValidationAnnotation.REQUIRED));
-
-        // check MetProperty's isValid() requiredness forcing.
-        assertNull("Not required property first failure with null value should be null (before isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-        assertTrue("Not required property with null value should be valid.", firstPropertyMetaProp.isValid());
-        assertNull("Not required property first failure with null value should be null (after isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-        assertTrue("Entity with not-required property with null value should be valid.", entity.isValid().isSuccessful());
-
-        firstPropertyMetaProp.setRequired(true);
+    public void required_by_declaration_property_without_a_value_is_invalid_at_both_meta_property_and_entity_levels() {
+        final MetaProperty<Integer> firstPropertyMetaProp = entity.getProperty("firstProperty");
 
         assertNull("Required property (with null value) first failure should be null (before isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-        assertFalse("Required property (with null value) should be invalid.", firstPropertyMetaProp.isValidWithRequiredCheck());
+        assertFalse("Required property (with null value) should be invalid.", firstPropertyMetaProp.isValidWithRequiredCheck(false));
         assertNotNull("Required property (with null value) first failure should be null (after isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
         assertFalse("Entity with required property with null value should be invalid.", entity.isValid().isSuccessful());
-
-        // at these cases no MetaProperty isValid() performs manually, just AE isValid() :
-
-        firstPropertyMetaProp.setRequired(false);
-
-        // check MetProperty's isValid() requiredness forcing.
-        assertNull("Not required property first failure with null value should be null (before AbstractEntity's isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-        assertTrue("Entity with not-required property with null value should be valid.", entity.isValid().isSuccessful());
-        assertNull("Not required property first failure with null value should be null (after AbstractEntity's isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-
-        firstPropertyMetaProp.setRequired(true);
-
-        assertNull("Required property (with null value) first failure should be null (before AbstractEntity's isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
-        assertFalse("Entity with required property with null value should be invalid.", entity.isValid().isSuccessful());
-        assertNotNull("Required property (with null value) first failure should be null (after AbstractEntity's isValid() invoked).", firstPropertyMetaProp.getFirstFailure());
     }
 
+    @Test(expected=EntityDefinitionException.class)
+    public void relaxing_requiredness_for_properties_declared_as_required_is_not_permitted() {
+        final MetaProperty<Integer> firstPropertyMetaProp = entity.getProperty("firstProperty");
+        firstPropertyMetaProp.setRequired(false);
+    }
+    
     @Test
     public void testSetterExceptionsAndResultsHandling() {
-        final MetaProperty property = entity.getProperty("number");
+        final MetaProperty<Integer> property = entity.getProperty("number");
         // No exception have to be thrown from setter.
         try {
             entity.setNumber(10);
@@ -748,13 +587,6 @@ public class AbstractEntityTest {
     @Test
     public void testPropertyDependencies() {
         try {
-            entity.addPropertyChangeListener("dependent", new PropertyChangeListener() {
-                @Override
-                public void propertyChange(final PropertyChangeEvent event) {
-                    observed = true;
-                }
-            });
-
             entity.setDependent(15);
             assertTrue("Dependent property have to be valid.", entity.getProperty("dependent").isValid());
             assertEquals("Incorrect value.", (Integer) 15, entity.getDependent());
@@ -764,10 +596,8 @@ public class AbstractEntityTest {
             assertEquals("Incorrect value.", (Integer) 15, entity.getDependent());
             assertEquals("Incorrect lastInvalidValue.", 25, entity.getProperty("dependent").getLastInvalidValue());
 
-            observed = false;
             // Update incorrect value of the dependent property by setting the main property.
             entity.setMain(30);
-            assertTrue("Dependent property setter need to be invoked! Because dependent property is invalid and need to be error recovered.", observed);
             assertTrue("Dependent property have to be valid.", entity.getProperty("dependent").isValid());
             assertEquals("Incorrect value.", (Integer) 25, entity.getDependent());
             assertEquals("Incorrect lastInvalidValue.", null, entity.getProperty("dependent").getLastInvalidValue());
@@ -781,9 +611,7 @@ public class AbstractEntityTest {
             assertTrue("Dependent property have to be valid.", entity.getProperty("dependent").isValid());
             assertEquals("Incorrect value.", (Integer) 15, entity.getDependent());
 
-            observed = false;
             entity.setMain(35);
-            assertFalse("Dependent property setter should not have been invoked.", observed);
             assertTrue("Dependent property have to be valid.", entity.getProperty("dependent").isValid());
             assertEquals("Incorrect value.", (Integer) 15, entity.getDependent());
             assertEquals("Incorrect lastInvalidValue.", null, entity.getProperty("dependent").getLastInvalidValue());
@@ -862,6 +690,22 @@ public class AbstractEntityTest {
     }
 
     @Test
+    public void copy_without_identity_is_supported() {
+        final Entity entity = factory.newEntity(Entity.class, 1L);
+        entity.setKey("key");
+        entity.setDesc("description");
+        entity.setMoney(new Money("23.25"));
+
+        final Entity copy = entity.copyWithoutIdentity(Entity.class);
+
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Entity with no id should be recognized as drity.", copy.isDirty());
+        assertNull("Id should not have been copied", copy.getId());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
+    }
+
+    @Test
     public void test_copy_for_parent_to_descendant() {
         final Entity entity = factory.newEntity(Entity.class, 1L);
         entity.setKey("key");
@@ -900,7 +744,6 @@ public class AbstractEntityTest {
     @Test
     public void test_copy_for_entities_with_dynamic_key() {
         final CorrectEntityWithDynamicEntityKey one = factory.newEntity(CorrectEntityWithDynamicEntityKey.class, 1L);
-        ;
         one.property1 = 38L;
         one.property2 = 98L;
         final DynamicEntityKey keyOne = new DynamicEntityKey(one);
@@ -934,9 +777,9 @@ public class AbstractEntityTest {
     }
 
     @Test
-    public void test_copy_from_non_instrumented_instance() {
+    public void copy_from_non_instrumented_instance_is_also_non_instrumented() {
         final Entity entity = new Entity();
-        entity.setEntityFactory(factory); // factory is required at all times
+        entity.setVersion(42L);
         entity.setId(1L);
         entity.setKey("key");
         entity.setDesc("description");
@@ -945,15 +788,94 @@ public class AbstractEntityTest {
         final Entity copy = entity.copy(Entity.class);
 
         assertEquals("Copy does not equal to the original instance", entity, copy);
-        assertFalse("Should have not been dirty", copy.isDirty());
-        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertFalse("Copy is instrumented", copy.isInstrumented());
+        assertEquals("IDs do not match", entity.getId(), copy.getId());
+        assertEquals("Versions do not match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
+    }
+    
+    @Test
+    public void copy_from_instrumented_instance_is_also_instrumented() {
+        final Entity entity = factory.newEntity(Entity.class);
+        entity.setVersion(42L);
+        entity.setId(1L);
+        entity.setKey("key");
+        entity.setDesc("description");
+        entity.setMoney(new Money("23.25"));
+
+        final Entity copy = entity.copy(Entity.class);
+
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Copy is not instrumented", copy.isInstrumented());
+        assertFalse("Copy is dirty", copy.isDirty());
+        assertEquals("IDs do not match", entity.getId(), copy.getId());
+        assertEquals("Versions do not match.", Long.valueOf(42L), copy.getVersion());
         assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
         assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
     }
 
+    @Test
+    public void copy_happens_in_the_initialisation_mode() {
+        final Entity entity = factory.newEntity(Entity.class);
+        entity.setVersion(42L);
+        entity.setId(1L);
+        entity.setKey("key");
+        entity.setDesc("description");
+        entity.setMoney(new Money("23.25"));
+
+        final Entity copy = entity.copy(Entity.class);
+
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Copy is not instrumented", copy.isInstrumented());
+        assertFalse("Copy is dirty", copy.isDirty());
+        assertFalse("Property key is copied, but should be recognised as not dirty", copy.getProperty("key").isDirty());
+        assertEquals("IDs do not match", entity.getId(), copy.getId());
+        assertEquals("Versions do not match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertFalse("Property desc is copied, but should be recognised as not dirty", copy.getProperty("desc").isDirty());
+        assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
+        assertFalse("Property money is copied, but should be recognised as not dirty", copy.getProperty("money").isDirty());
+    }
 
     @Test
-    public void test_equals_for_instances_of_the_same_type_with_the_same_key_values() {
+    public void copy_from_uninstrumented_proxied_instance_is_also_uninstrumented_and_proxied() {
+        final Class<? extends Entity> type = EntityProxyContainer.proxy(Entity.class, "firstProperty", "monitoring", "observableProperty");
+        
+        final Entity entity = EntityFactory.newPlainEntity(type, 12L);
+        entity.setVersion(42L);
+        entity.setKey("key");
+        entity.setDesc("description");
+
+        final Entity copy = entity.copy(type);
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertFalse("Copy is instrumented", copy.isInstrumented());
+        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertEquals("Versions should match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Proxied properties do not match", entity.proxiedPropertyNames(), copy.proxiedPropertyNames());
+    }
+
+    @Test
+    public void copy_from_instrumented_proxied_instance_is_also_instrumented_and_proxied() {
+        final Class<? extends Entity> type = EntityProxyContainer.proxy(Entity.class, "firstProperty", "monitoring", "observableProperty");
+        
+        final Entity entity = factory.newEntity(type, 12L);
+        entity.setVersion(42L);
+        entity.setKey("key");
+        entity.setDesc("description");
+
+        final Entity copy = entity.copy(type);
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Copy is not instrumented", copy.isInstrumented());
+        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertEquals("Versions should match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Proxied properties do not match", entity.proxiedPropertyNames(), copy.proxiedPropertyNames());
+    }
+
+    @Test
+    public void two_instances_of_the_same_type_with_the_same_key_values_are_equal() {
         final Entity thisEntity = factory.newEntity(Entity.class, 1L);
         thisEntity.setKey("key");
         final Entity thatEntity = factory.newEntity(Entity.class, 2L);
@@ -1016,7 +938,7 @@ public class AbstractEntityTest {
         try {
             factory.newEntity(MasterEntity1.class, "key", "description");
             fail("Should be failed.");
-        } catch (final IllegalStateException e) {
+        } catch (final Exception e) {
         }
     }
 
@@ -1025,7 +947,7 @@ public class AbstractEntityTest {
         try {
             factory.newEntity(MasterEntity2.class, "key", "description");
             fail("Should be failed.");
-        } catch (final IllegalStateException e) {
+        } catch (final Exception e) {
         }
     }
 
@@ -1034,7 +956,7 @@ public class AbstractEntityTest {
         try {
             factory.newEntity(MasterEntity3.class, "key", "description");
             fail("Should be failed.");
-        } catch (final IllegalStateException e) {
+        } catch (final Exception e) {
         }
     }
 
@@ -1049,89 +971,8 @@ public class AbstractEntityTest {
         try {
             factory.newEntity(MasterEntity6.class, "key", "description");
             fail("Should be failed.");
-        } catch (final IllegalStateException e) {
+        } catch (final Exception e) {
         }
-    }
-
-    @Test
-    public void test_entity_locking_during_validation_of_its_property() throws Exception {
-        final EntityWithLocableProperty entity = factory.newEntity(EntityWithLocableProperty.class);
-
-        // changing property happens on a separate thread
-        final Thread changingThread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                // this call should put setting into a long running mode until property validation is unlocked
-                entity.setLockPropertyValidation(true);
-                entity.setLockableProperty(Money.zero);
-            }
-        });
-        changingThread.start();
-        Thread.sleep(500); // to allow for changing thread to kick in properly
-
-        // validation happens on a separate thread
-        final Thread validationThread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                entity.isValid();
-            }
-        });
-        validationThread.start();
-        Thread.sleep(500); // to allow for validation thread to kick in properly
-
-        // both threads should be alive
-        assertTrue(changingThread.isAlive());
-        assertTrue(validationThread.isAlive());
-
-        assertNull(entity.getLockableProperty()); // property should not have been changed yet
-
-        entity.setLockPropertyValidation(false); // release property validation lock
-
-        Thread.sleep(500); // to allow for changing and validation threads to complete
-
-        assertNotNull(entity.getLockableProperty()); // property should have been changed already
-        assertNotNull(entity.isValid().isSuccessful());
-    }
-
-    @Test
-    public void test_entity_locking_during_its_validation() throws Exception {
-        final EntityWithLocableValidation entity = factory.newEntity(EntityWithLocableValidation.class);
-
-        // validation happens on a separate thread
-        final Thread validationThread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                // this call should put entity validation into a long running mode until validation is unlocked explicitly
-                entity.setLockEntityValidation(true);
-                entity.isValid();
-            }
-        });
-        validationThread.start();
-        Thread.sleep(500); // to allow for validation thread to kick in properly
-
-        // changing property happens on a separate thread
-        final Thread changingThread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                // this should lock due to a running entity validation process
-                entity.setMoney(Money.zero);
-            }
-        });
-        changingThread.start();
-        Thread.sleep(500); // to allow for changing thread to kick in properly
-
-        // both threads should be alive
-        assertTrue(changingThread.isAlive());
-        assertTrue(validationThread.isAlive());
-
-        assertNull(entity.getMoney()); // property should not have been changed yet
-
-        entity.setLockEntityValidation(false); // release validation lock
-
-        Thread.sleep(500); // to allow for changing and validation threads to complete
-
-        assertNotNull(entity.getMoney()); // property should have been changed already
-        assertNotNull(entity.isValid().isSuccessful());
     }
 
     @Test
@@ -1179,6 +1020,199 @@ public class AbstractEntityTest {
         final Entity thatEntity = factory.newEntity(Entity.class, "key2", "description");
 
         assertFalse(thisEntity.sameAs(thatEntity));
+    }
+
+    @Test
+    public void required_desc_should_not_permit_empty_values() {
+        final Entity entity = factory.newEntity(Entity.class, "key1", "description");
+        assertTrue(entity.getProperty("desc").isValid());
+
+        entity.setDesc("");
+        assertFalse(entity.getProperty("desc").isValid());
+
+    }
+
+    @Test
+    public void required_desc_should_not_permit_blank_values() {
+        final Entity entity = factory.newEntity(Entity.class, "key1", "description");
+        assertTrue(entity.getProperty("desc").isValid());
+
+        entity.setDesc("    ");
+        assertFalse(entity.getProperty("desc").isValid());
+    }
+
+    @Test
+    public void required_desc_should_not_permit_null_values() {
+        final Entity entity = factory.newEntity(Entity.class, "key1", "description");
+        assertTrue(entity.getProperty("desc").isValid());
+
+        entity.setDesc(null);
+        assertFalse(entity.getProperty("desc").isValid());
+    }
+
+    @Test
+    public void required_desc_should_not_be_valid_after_instantiation() {
+        final Entity entity = factory.newByKey(Entity.class, "key1");
+
+        final MetaProperty<String> descProperty = entity.getProperty("desc");
+        assertFalse(descProperty.isValid());
+
+        // let's also check that blank value is not permitted even when the original value was blank
+        entity.setDesc("    ");
+        assertFalse(descProperty.isValid());
+    }
+
+    @Test
+    public void required_desc_should_support_custo_error_messages_with_templating() {
+        final Entity entity = factory.newByKey(Entity.class, "key1");
+        final MetaProperty<String> descProperty = entity.getProperty("desc");
+        assertFalse(descProperty.isValid());
+        assertEquals(
+                format("Property \"%s\" in entity \"%s\" does not permit blank values.",
+                        TitlesDescsGetter.getTitleAndDesc("desc", Entity.class).getKey(),
+                        TitlesDescsGetter.getEntityTitleAndDesc(Entity.class).getKey()),
+                descProperty.getFirstFailure().getMessage());
+    }
+    
+    @Test
+    public void warnings_are_empty_for_entity_without_any_properties_with_warnings() {
+        final EntityWithWarnings entity = factory.newByKey(EntityWithWarnings.class, "some key");
+        entity.setDesc("some desc");
+        entity.setIntProp(20);
+        
+        assertFalse(entity.hasWarnings());
+        assertTrue(entity.warnings().isEmpty());
+        assertTrue(entity.isValid().isSuccessful());
+        assertTrue(entity.isValid().isSuccessfulWithoutWarning());
+    }
+    
+    @Test
+    public void number_of_warnings_is_equal_to_number_of_entity_properties_with_warnings() {
+        final EntityWithWarnings entity = factory.newByKey(EntityWithWarnings.class, "some key");
+        entity.setDesc("some desc");
+        entity.setSelfRefProp(entity);
+        entity.setIntProp(120);
+        
+        assertTrue(entity.hasWarnings());
+        assertEquals(2, entity.warnings().size());
+        assertTrue(entity.isValid().isSuccessful());
+        assertFalse(entity.isValid().isSuccessfulWithoutWarning());
+    }
+    
+    @Test
+    public void one_warning_is_identified_for_entity_with_one_property_in_error_and_one_property_with_warning() {
+        final EntityWithWarnings entity = factory.newByKey(EntityWithWarnings.class, "some key");
+        entity.setSelfRefProp(null);
+        entity.setIntProp(120);
+        
+        assertFalse(entity.isValid().isSuccessful());
+        assertTrue(entity.hasWarnings());
+        assertEquals(1, entity.warnings().size());
+    }
+    
+    @Test
+    public void warnings_are_identified_correctly_after_reassigning_the_property_value_to_valid_one() {
+        final EntityWithWarnings entity = factory.newByKey(EntityWithWarnings.class, "some key");
+
+        // assign warning triggering value
+        entity.setIntProp(120);
+        assertTrue(entity.hasWarnings());
+        assertEquals(1, entity.warnings().size());
+
+        // assign warning clearing value
+        entity.setIntProp(20);
+        assertFalse(entity.hasWarnings());
+        assertEquals(0, entity.warnings().size());
+    }
+
+    @Test
+    public void numeric_props_with_precision_but_without_scale_are_invalid() {
+        final Either<Exception, EntityWithInvalidMoneyPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPrecision.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidMoneyPropWithPrecision> left = (Left<Exception, EntityWithInvalidMoneyPropWithPrecision>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPrecision.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void numeric_props_with_scale_but_without_precision_are_invalid() {
+        final Either<Exception, EntityWithInvalidMoneyPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithScale.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidMoneyPropWithScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithScale>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithScale.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void numeric_props_with_negative_precision_are_invalid() {
+        final Either<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void numeric_props_with_negative_scale_are_invalid() {
+        final Either<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void numeric_props_with_lendth_are_invalid() {
+        final Either<Exception, EntityWithInvalidMoneyPropWithLength> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithLength.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidMoneyPropWithLength> left = (Left<Exception, EntityWithInvalidMoneyPropWithLength>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_OF_PARAM_LENGTH_MSG, "numericMoney", EntityWithInvalidMoneyPropWithLength.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void numeric_props_with_precision_less_than_scale_are_invalid() {
+        final Either<Exception, EntityWithInvalidIntegerProp> result = Try(() -> factory.newByKey(EntityWithInvalidIntegerProp.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidIntegerProp> left = (Left<Exception, EntityWithInvalidIntegerProp>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_VALUES_FOR_PRECITION_AND_SCALE_MSG, "numericInteger", EntityWithInvalidIntegerProp.class.getName()), ex.getMessage());
+    }
+    
+    @Test
+    public void non_numeric_props_with_traliningZeros_but_without_precision_and_scale_are_invalid() {
+        final Either<Exception, EntityWithInvalidStringPropWithTrailingZeros> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithTrailingZeros.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidStringPropWithTrailingZeros> left = (Left<Exception, EntityWithInvalidStringPropWithTrailingZeros>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithTrailingZeros.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void non_numeric_props_with_precision_are_invalid() {
+        final Either<Exception, EntityWithInvalidStringPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithPrecision.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidStringPropWithPrecision> left = (Left<Exception, EntityWithInvalidStringPropWithPrecision>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithPrecision.class.getName()), ex.getMessage());
+    }
+
+    @Test
+    public void non_numeric_props_with_scale_are_invalid() {
+        final Either<Exception, EntityWithInvalidStringPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithScale.class, "some key"));
+        assertTrue(result instanceof Left);
+        final Left<Exception, EntityWithInvalidStringPropWithScale> left = (Left<Exception, EntityWithInvalidStringPropWithScale>) result;
+        final Throwable ex = left.value.getCause().getCause();
+        assertTrue(ex instanceof EntityDefinitionException);
+        assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithScale.class.getName()), ex.getMessage());
     }
 
 }
